--- a/css/styles.css
+++ b/css/styles.css
@@ -399,3 +399,192 @@ height: 40px;
 .footer-social-icon {
   fill: #f4f4fd;
 }
+.backdrop {
+  background-color: rgba(46, 47, 66, 0.4);
+  width: 100%;
+  height: 100%;
+  position: fixed;
+  left: 0;
+  top: 0;
+  opacity: 0;
+  visibility: hidden;
+  pointer-events: none;
+  transition: opacity 250ms cubic-bezier(0.4, 0, 0.2, 1), visibility 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.is-open{
+  opacity: 1;
+  visibility: visible;
+  pointer-events: auto;
+}
+.modal {
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transition: transform 250ms cubic-bezier(0.4, 0, 0.2, 1);
+  transform: translate(-50%, -50%);
+  width: 408px;
+  min-height: 584px;
+  box-shadow: 0 1px 1px 0 rgba(0, 0, 0, 0.14), 0 1px 3px 0 rgba(0, 0, 0, 0.12), 0 2px 1px 0 rgba(0, 0, 0, 0.2);
+  background-color: #fcfcfc;
+  border-radius: 4px;
+  padding: 72px 24px 24px;
+}
+.modal-close-button {
+  position: absolute;
+  top: 24px;
+  right: 24px;
+width: 24px;
+height: 24px;
+border-radius: 100%;
+background-color: #e7e9fc;
+border: 1px solid rgba(0, 0, 0, 0.1);
+padding: 0;
+cursor: pointer;
+display: flex;
+justify-content: center;
+align-items: center;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-close-button:hover, 
+.modal-close-button:focus{
+  background-color: #404bbf;
+  border: none;
+}
+.modal-close-button:hover > .modal-close-icon, 
+.modal-close-button:focus > .modal-close-icon{
+  fill: #fff;
+}
+.modal-close-icon {
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-title {
+  margin-bottom: 16px;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+text-align: center;
+color: #2e2f42;
+}
+.modal-field {
+  margin-bottom: 8px;
+}
+.modal-label {
+display: block;
+margin-bottom: 4px;
+font-size: 12px;
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8e8f99;
+}
+.modal-input-wrap {
+  position: relative;
+}
+.modal-input {
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 40px;
+  outline: transparent;
+  padding-left: 38px;
+  background-color: transparent;
+  transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus{
+  border-color: #4d5ae5
+}
+.modal-icon {
+  position: absolute;
+  left: 16px;
+  top: 50%;
+  transform: translateY(-50%);
+  fill: #2e2f42;
+  transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-input:focus + .modal-icon{
+  fill: #4d5ae5;
+}
+.modal-textarea-field {
+  margin-bottom: 16px;
+}
+
+.modal-textarea {
+  outline: transparent;
+  background-color: transparent;
+  resize: none;
+  border: 1px solid rgba(46, 47, 66, 0.4);
+  border-radius: 4px;
+  width: 100%;
+  height: 120px;
+  padding: 8px 16px;
+font-size: 12px;
+
+transition: border-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: rgba(46, 47, 66, 0.4);
+}
+.modal-textarea:focus{
+  border-color: #4d5ae5
+}
+.modal-check-field {
+  margin-bottom: 24px;
+}
+.modal-check-input:checked + .modal-check-label > .checkbox {
+  background-color: #404bbf;
+  border: none;
+  fill: #f4f4fd;
+
+}
+.modal-check-label {
+
+font-size: 12px;
+
+line-height: 1.17;
+letter-spacing: 0.04em;
+color: #8e8f99;
+
+}
+.checkbox {
+  border-radius: 2px;
+border: 1px solid rgba(46, 47, 66, 0.4);
+width: 16px;
+height: 16px;
+fill: transparent;
+display: inline-flex;
+justify-content: center;
+align-items: center;
+margin-right: 8px;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.check-icon {
+
+transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.check-link {
+  color: #4d5ae5;
+  text-decoration: underline;
+}
+.modal-send-button{
+  cursor: pointer;
+  border: none;
+  border-radius: 4px;
+  min-width: 169px;
+  height: 56px;
+  box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+  background-color: #4d5ae5;
+font-weight: 500;
+font-size: 16px;
+
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+display: block;
+margin: 0 auto;
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1);
+}
+.modal-send-button:hover,
+.modal-send-button:focus{
+  background-color: #404bbf;
+}
