--- a/css/styles.css
+++ b/css/styles.css
@@ -399,6 +399,57 @@ height: 40px;
 .footer-social-icon {
   fill: #f4f4fd;
 }
+.footer-form-wrap {
+  margin-left: auto;
+}
+.footer-form-title {
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.02em;
+color: #fff;
+margin-bottom: 16px;
+}
+.footer-form {
+  display: flex;
+  gap: 24px;
+}
+
+.footer-input {
+  border: 1px solid #fff;
+border-radius: 4px;
+width: 264px;
+height: 40px;
+padding-left: 16px;
+background-color: transparent;
+outline: transparent;
+font-size: 12px;
+line-height: 2;
+letter-spacing: 0.04em;
+color: #fff;
+box-shadow: 0 4px 4px 0 rgba(0, 0, 0, 0.15);
+
+}
+.footer-form-button {
+  border-radius: 4px;
+min-width: 165px;
+height: 40px;
+background-color: #4d5ae5;
+border: none;
+cursor: pointer;
+font-weight: 500;
+font-size: 16px;
+line-height: 1.5;
+letter-spacing: 0.04em;
+color: #fff;
+display: flex;
+justify-content: center;
+align-items: center;
+}
+.footer-form-icon {
+  fill: #fff;
+  margin-left: 16px;
+}
 .backdrop {
   background-color: rgba(46, 47, 66, 0.4);
   width: 100%;
