--- a/css/styles.css
+++ b/css/styles.css
@@ -486,7 +486,7 @@ align-items: center;
   right: 24px;
 width: 24px;
 height: 24px;
-border-radius: 100%;
+border-radius: 50%;
 background-color: #e7e9fc;
 border: 1px solid rgba(0, 0, 0, 0.1);
 padding: 0;
@@ -607,12 +607,10 @@ display: inline-flex;
 justify-content: center;
 align-items: center;
 margin-right: 8px;
-transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1);
-}
-.check-icon {
+transition: background-color 250ms cubic-bezier(0.4, 0, 0.2, 1), border 250ms cubic-bezier(0.4, 0, 0.2, 1), fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 
-transition: fill 250ms cubic-bezier(0.4, 0, 0.2, 1);
 }
+
 .check-link {
   color: #4d5ae5;
   text-decoration: underline;
